[gd_scene load_steps=13 format=2]

[ext_resource path="res://items/hud/inventory/BookIcon.png" type="Texture" id=1]
[ext_resource path="res://items/hud/inventory/Inventory.gd" type="Script" id=2]
[ext_resource path="res://items/hud/inventory/BookElephant.png" type="Texture" id=3]
[ext_resource path="res://items/hud/inventory/BookCave.png" type="Texture" id=4]
[ext_resource path="res://items/hud/inventory/BookChurch.png" type="Texture" id=5]
[ext_resource path="res://items/hud/inventory/BookStation.png" type="Texture" id=6]
[ext_resource path="res://items/hud/inventory/TagElephant.png" type="Texture" id=7]
[ext_resource path="res://items/hud/inventory/TagStation.png" type="Texture" id=8]
[ext_resource path="res://items/hud/inventory/TagCave.png" type="Texture" id=9]
[ext_resource path="res://items/hud/inventory/TagChruch.png" type="Texture" id=10]
[ext_resource path="res://items/Cave/Agulha.png" type="Texture" id=11]
[ext_resource path="res://items/hud/inventory/Pages.gd" type="Script" id=12]

[node name="Inventory" type="Node2D"]
script = ExtResource( 2 )
popup_path = NodePath("PopUp")
sprite_path = NodePath("PopUp/Sprite")
cave_page_path = NodePath("PopUp/CaveItems")
cave_sprite = ExtResource( 4 )
church_sprite = ExtResource( 5 )
elephant_sprite = ExtResource( 3 )
station_sprite = ExtResource( 6 )

[node name="PopUp" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="PopUp"]
margin_left = -63.0
margin_top = -42.0
margin_right = 1330.0
margin_bottom = 744.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elephant" type="TextureRect" parent="PopUp"]
margin_left = 710.0
margin_top = 65.8909
margin_right = 864.0
margin_bottom = 147.891
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Station" type="TextureRect" parent="PopUp"]
margin_left = 811.555
margin_top = 67.5546
margin_right = 965.555
margin_bottom = 149.555
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cave" type="TextureRect" parent="PopUp"]
margin_left = 911.0
margin_top = 70.0
margin_right = 1065.0
margin_bottom = 152.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Church" type="TextureRect" parent="PopUp"]
margin_left = 1010.79
margin_top = 70.3363
margin_right = 1164.79
margin_bottom = 152.336
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="PopUp"]
position = Vector2( 640, 360 )
texture = ExtResource( 4 )

[node name="CaveItems" type="Node2D" parent="PopUp"]
visible = false
script = ExtResource( 12 )

[node name="Sprite1" type="Sprite" parent="PopUp/CaveItems"]
position = Vector2( 563.394, 291.629 )
scale = Vector2( 0.464724, 0.39733 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="PopUp/CaveItems"]
position = Vector2( 743.786, 287.529 )
scale = Vector2( 0.464724, 0.39733 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="PopUp/CaveItems"]
position = Vector2( 887.865, 282.258 )
scale = Vector2( 0.464724, 0.39733 )
texture = ExtResource( 11 )

[node name="Sprite4" type="Sprite" parent="PopUp/CaveItems"]
position = Vector2( 1033.7, 278.743 )
scale = Vector2( 0.464724, 0.39733 )
texture = ExtResource( 11 )

[node name="Sprite5" type="Sprite" parent="PopUp/CaveItems"]
position = Vector2( 279.921, 444.493 )
scale = Vector2( 0.464724, 0.39733 )
texture = ExtResource( 11 )

[node name="Sprite6" type="Sprite" parent="PopUp/CaveItems"]
position = Vector2( 421.657, 448.007 )
scale = Vector2( 0.464724, 0.39733 )
texture = ExtResource( 11 )

[node name="Sprite7" type="Sprite" parent="PopUp/CaveItems"]
position = Vector2( 557.537, 451.521 )
scale = Vector2( 0.464724, 0.39733 )
texture = ExtResource( 11 )

[node name="Sprite8" type="Sprite" parent="PopUp/CaveItems"]
position = Vector2( 757.842, 445.664 )
scale = Vector2( 0.464724, 0.39733 )
texture = ExtResource( 11 )

[node name="Icon" type="Node2D" parent="."]
scale = Vector2( 0.3, 0.3 )

[node name="Book" type="TextureRect" parent="Icon"]
margin_left = 3925.89
margin_top = 2066.89
margin_right = 4181.89
margin_bottom = 2322.89
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="PopUp/Elephant" to="." method="show_elephant_page"]
[connection signal="gui_input" from="PopUp/Station" to="." method="show_station_page"]
[connection signal="gui_input" from="PopUp/Cave" to="." method="show_cave_page"]
[connection signal="gui_input" from="PopUp/Church" to="." method="show_church_page"]
[connection signal="gui_input" from="Icon/Book" to="." method="toggle_popup"]
